# notofu

./: README.md  flake.nix  main.py  pyproject.toml
scripts/: main.py  pyproject.toml
src/notofu/ca_client/: pyproject.toml
src/notofu/ca_server/: pyproject.toml
src/notofu/proof_client/: main.py  pyproject.toml
src/notofu/proof_server/: main.py  pyproject.toml
src/notofu/signer/: __init__.py  pyproject.toml
src/notofu/verifier/: __init__.py  pyproject.toml
test/data/: get-caller-identity-200-success.xml  get-caller-identity-403-failure.xml
