[project]
name = "notofu"
version = "0.1.0"
readme = 'README.md'
authors = [
    {name = "Scott Stephens", email = "stephens.js@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
ca-client = [
    'notofu-ca-client'
]
ca-server = [
    'notofu-ca-server'
]
proof-client = [
    'notofu-proof-client'
]
proof-server = [
    'notofu-proof-server'
]


[tool.uv]
python-preference = "system"

[tool.uv.workspace]
members = [
    "src/notofu/*",
    "scripts"
]
exclude = [
    "*/__*"
]

[tool.uv.sources]
notofu-signer = { workspace = true }
notofu-verifier = { workspace = true }
notofu-ca-client = { workspace = true }
notofu-ca-server = { workspace = true }
notofu-proof-client = { workspace = true }
notofu-proof-server = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"